[package]
name = "gravity-combat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "^0.1.7" }
glam = "0.28.0"
js-sys = "^0.3.69"
log = "0.4.22"
wasm-bindgen = "^0.2.92"
wasm-logger = "0.2.0"
web-sys = { version = "^0.3.69", features = [
    'CanvasRenderingContext2d',
    'console',
    'Document',
    'Element',
    'Event',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'ImageData',
    'KeyboardEvent',
    'Location',
    'Window',
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
